--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -785,6 +785,7 @@
             5 - In-app Search
          This needs to match the constants in
          policy/src/com/android/internal/policy/impl/PhoneWindowManager.java
+         NOTE: Keep for tree compatability but unimplemented.
     -->
     <integer name="config_longPressOnMenuBehavior">3</integer>
 
@@ -2042,10 +2043,6 @@
     -->
     <bool name="config_proximityCheckOnWake">false</bool>
     <integer name="config_proximityCheckTimeout">250</integer>
-
-    <!-- Timeout in MS for how long you have to long-press the back key to
-         kill the foreground app. -->
-    <integer name="config_backKillTimeout">2000</integer>
 
     <!-- Setting to false will disable CM's IME switcher implementation for tablets -->
     <bool name="config_show_cmIMESwitcher">true</bool>
