--- a/packages/SystemUI/res/layout/navigation_bar.xml
+++ b/packages/SystemUI/res/layout/navigation_bar.xml
@@ -52,10 +52,11 @@
                 android:layout_width="@dimen/navigation_key_width"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_sysbar_back"
-                systemui:keyCode="4"
                 android:layout_weight="0"
                 android:scaleType="center"
                 android:contentDescription="@string/accessibility_back"
+                systemui:longPressUri="@string/longpress_uri_back"
+                systemui:doubleTapUri="@string/doubletap_uri_back"
                 />
             <View 
                 android:layout_width="match_parent"
@@ -67,10 +68,10 @@
                 android:layout_width="@dimen/navigation_key_width"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_sysbar_home"
-                systemui:keyCode="3"
-                systemui:keyRepeat="false"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_home"
+                systemui:longPressUri="@string/longpress_uri_home"
+                systemui:doubleTapUri="@string/doubletap_uri_home"
                 />
             <View 
                 android:layout_width="match_parent"
@@ -84,6 +85,8 @@
                 android:src="@drawable/ic_sysbar_recent"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_recent"
+                systemui:longPressUri="@string/longpress_uri_recent"
+                systemui:doubleTapUri="@string/doubletap_uri_recent"
                 />
             <FrameLayout
                 android:layout_width="@dimen/navigation_extra_key_width"
@@ -96,8 +99,8 @@
                     android:contentDescription="@string/accessibility_menu"
                     android:src="@drawable/ic_sysbar_menu"
                     android:visibility="invisible"
-                    systemui:keyCode="82" />
-
+		            systemui:longPressUri="@string/longpress_uri_menu"
+                    systemui:doubleTapUri="@string/doubletap_uri_menu" />
                 <com.android.systemui.statusbar.policy.KeyButtonView
                     android:id="@+id/ime_switcher"
                     android:layout_width="@dimen/navigation_extra_key_width"
@@ -206,7 +209,8 @@
                     android:contentDescription="@string/accessibility_menu"
                     android:src="@drawable/ic_sysbar_menu_land"
                     android:visibility="invisible"
-                    systemui:keyCode="82" />
+		            systemui:longPressUri="@string/longpress_uri_menu"
+                    systemui:doubleTapUri="@string/doubletap_uri_menu" />
             </FrameLayout>
 
             <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/recent_apps"
@@ -215,6 +219,8 @@
                 android:src="@drawable/ic_sysbar_recent_land"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_recent"
+                systemui:longPressUri="@string/longpress_uri_recent"
+                systemui:doubleTapUri="@string/doubletap_uri_recent"
                 />
             <View 
                 android:layout_height="match_parent"
@@ -226,10 +232,10 @@
                 android:layout_height="80dp"
                 android:layout_width="match_parent"
                 android:src="@drawable/ic_sysbar_home_land"
-                systemui:keyCode="3"
-                systemui:keyRepeat="false"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_home"
+                systemui:longPressUri="@string/longpress_uri_home"
+                systemui:doubleTapUri="@string/doubletap_uri_home"
                 />
             <View 
                 android:layout_height="match_parent"
@@ -242,9 +248,10 @@
                 android:layout_width="match_parent"
                 android:src="@drawable/ic_sysbar_back_land"
                 android:scaleType="center"
-                systemui:keyCode="4"
                 android:layout_weight="0"
                 android:contentDescription="@string/accessibility_back"
+                systemui:longPressUri="@string/longpress_uri_back"
+                systemui:doubleTapUri="@string/doubletap_uri_back"
                 />
             <View
                 android:layout_height="40dp"
