NX: code cleanup and bug fixes
-- BaseNavigtionBar: expose setKeyguardShowing public method
   and let StatusbarKeyguardView update us. Using this fixes a
   NxPulse bug in which if NXPulse was enabled and user paused
   music from Keyguard widget, the NxLogo would not invalidate
   when keyguard was dismissed

-- Remove unnecessary DelegateHelper code from NX by introducing
   a forceDisable public method in DelegatHelper

-- set onTouchListener in constructor instead of onInflate

Change-Id: I03c333a2cd72dcaf9acd7741e7030f9830c5277c

--- a/packages/SystemUI/res/layout-sw600dp/nx_bar.xml
+++ b/packages/SystemUI/res/layout-sw600dp/nx_bar.xml
@@ -39,38 +39,25 @@
             android:clipToPadding="false"
             android:orientation="horizontal" >
 
-            <!-- navigation controls -->
-            <View
-                android:id="@+id/nx_stub_left"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:visibility="invisible"
-                />
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1"/>
+
+            <!-- navigation controls -->
             <com.android.systemui.nx.NxLogoView
                 android:id="@+id/nx_stub_middle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0"
                 android:visibility="invisible"
+                android:layout_weight="0"
                 android:src="@drawable/ic_eos_nx" />
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
-             <View
-                android:id="@+id/nx_stub_right"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:visibility="invisible"
-                />
+                android:layout_weight="1"/>
+
         </LinearLayout>
 
         <!-- lights out layout to match exactly -->
@@ -126,38 +113,25 @@
             android:animateLayoutChanges="true"
             >
 
-            <!-- navigation controls -->
-            <View
-                android:id="@+id/nx_stub_left"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:visibility="invisible"
-                />
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
+                android:layout_weight="1"/>
+
+            <!-- navigation controls -->
             <com.android.systemui.nx.NxLogoView
                 android:id="@+id/nx_stub_middle"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0"
                 android:visibility="invisible"
+                android:layout_weight="0"
                 android:src="@drawable/ic_eos_nx" />
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                />
-            <View
-                android:id="@+id/nx_stub_right"
-                android:layout_width="48dp"
-                android:layout_height="match_parent"
-                android:layout_weight="0"
-                android:visibility="invisible"
-                />
+                android:layout_weight="1"/>
+
         </LinearLayout>
 
         <!-- lights out layout to match exactly -->
